--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  top_snackbar_flutter: ^2.1.1
+  loading_animation_widget: ^1.2.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2  
 
 dev_dependencies:
   flutter_test:
